Refactor: 명세서 수정
