# swagger/home.swagger.yaml
@@ -20,12 +20,29 @@ paths:
                 items:
                   type: object
                   properties:
-                    folderId:
+                    isSuccess:
+                      type: boolean
+                      example: true
+                    code:
+                      type: integer
+                      example: 2000
+                    message:
                       type: string
-                      description: 폴더 ID
-                    folderName:
-                      type: string
-                      description: 폴더 이름
+                      example: "success!"
+                    result:
+                      type: array
+                      description: 폴더 목록 데이터
+                      items:
+                        type: object
+                        properties:
+                          folderId:
+                            type: integer
+                            description: 폴더 ID
+                            example: 1
+                          folderName:
+                            type: string
+                            description: 폴더 이름
+                            example: "수학"
         '400':
           description: 잘못된 요청
           content:
@@ -33,7 +50,16 @@ paths:
               schema:
                 type: object
                 properties:
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: string
+                    example: "COMMON001"
                   message:
+                    type: string
+                    example: "잘못된 요청입니다."
+                  result:
                     type: string
                     example: "잘못된 요청 본문"
 
@@ -45,14 +71,15 @@ paths:
         - 홈
       parameters:
         - name: order
-          in: query
+          in: body
           required: true
           schema:
             type: array
             items:
-              type: string
+              type: integer
               description: 폴더 ID
-            description: 새 폴더 순서 배열 (배열의 순서가 새로운 폴더 배치를 나타냅니다.)
+            description: 폴더 ID 배열, 원하는 순서대로 나열
+            example: [3, 1, 2]
       responses:
         '200':
           description: 폴더 순서 조정 성공
@@ -61,9 +88,37 @@ paths:
               schema:
                 type: object
                 properties:
+                  isSuccess:
+                    type: boolean
+                    example: true
+                  code:
+                    type: integer
+                    example: 2000
                   message:
                     type: string
+                    example: "success!"
+                  result:
+                    type: string
                     example: "폴더 순서 조정 성공"
+        '400':
+          description: 잘못된 요청
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: string
+                    example: "COMMON001"
+                  message:
+                    type: string
+                    example: "잘못된 요청입니다."
+                  result:
+                    type: string
+                    example: "잘못된 요청 본문"     
 
   /folders/{folderId}:
     patch:
@@ -76,14 +131,16 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            type: integer
             description: 폴더 ID
+            example: 1
         - name: folderName
-          in: query
+          in: body
           required: true
           schema:
             type: string
             description: 수정할 폴더 이름
+            example: "새 폴더 이름"
       responses:
         '200':
           description: 폴더 이름 수정 성공
@@ -92,7 +149,16 @@ paths:
               schema:
                 type: object
                 properties:
+                  isSuccess:
+                    type: boolean
+                    example: true
+                  code:
+                    type: integer
+                    example: 2000
                   message:
+                    type: string
+                    example: "success!"
+                  result:
                     type: string
                     example: "폴더 이름 수정 성공"
         '400':
@@ -102,7 +168,16 @@ paths:
               schema:
                 type: object
                 properties:
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: string
+                    example: "COMMON001"
                   message:
+                    type: string
+                    example: "잘못된 요청입니다."
+                  result:
                     type: string
                     example: "잘못된 요청 본문"
         '404':
@@ -112,14 +187,22 @@ paths:
               schema:
                 type: object
                 properties:
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: string
+                    example: "COMMON005"
                   message:
                     type: string
                     example: "데이터를 찾을 수 없습니다."
-
-
+                  result:
+                    type: string
+                    example: "데이터를 찾을 수 없습니다."
+                  
     delete:
       summary: 폴더 삭제하기
-      description: 폴더를 삭제하면 그 안에 있는 문제들도 모두 삭제됩니다.
+      description: 폴더 ID를 사용해 폴더를 삭제한다.
       tags:
         - 홈
       parameters:
@@ -127,19 +210,48 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            type: integer
             description: 폴더 ID
+            example: 1
       responses:
-        '204':
-          description: 폴더 및 폴더 내 문제 삭제 성공
+        '200':
+          description: 폴더 삭제 성공
           content:
             application/json:
               schema:
                 type: object
                 properties:
+                  isSuccess:
+                    type: boolean
+                    example: true
+                  code:
+                    type: integer
+                    example: 2000
                   message:
                     type: string
-                    example: "폴더 및 폴더 내 문제 삭제 성공"
+                    example: "success!"
+                  result:
+                    type: string
+                    example: "폴더 삭제 성공"
+        '400':
+          description: 잘못된 요청
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: string
+                    example: "COMMON001"
+                  message:
+                    type: string
+                    example: "잘못된 요청입니다."
+                  result:
+                    type: string
+                    example: "잘못된 요청 본문"
         '404':
           description: 찾을 수 없음
           content:
@@ -147,7 +259,16 @@ paths:
               schema:
                 type: object
                 properties:
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: string
+                    example: "COMMON005"
                   message:
+                    type: string
+                    example: "데이터를 찾을 수 없습니다."
+                  result:
                     type: string
                     example: "데이터를 찾을 수 없습니다."
 
@@ -162,7 +283,7 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            type: integer
             description: 폴더 ID
       responses:
         '200':
@@ -172,24 +293,59 @@ paths:
               schema:
                 type: object
                 properties:
-                  folderName:
+                  isSuccess:
+                    type: boolean
+                    example: true
+                  code:
+                    type: integer
+                    example: 2000
+                  message:
                     type: string
-                    description: 폴더 이름
-                  problems:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        problemId:
-                          type: string
-                          description: 문제 ID
-                        problemText:
-                          type: string
-                          description: 문제 텍스트
-                        problemImage:
-                          type: string
-                          format: uri
-                          description: 문제 이미지 URL
+                    example: "success!"
+                  result:
+                    type: object
+                    properties:
+                      folderName:
+                        type: string
+                        description: 폴더 이름
+                        example: "수학"
+                      problems:
+                        type: array
+                        description: 폴더 내 문제 목록
+                        items:
+                          type: object
+                          properties:
+                            problemId:
+                              type: integer
+                              description: 문제 ID
+                              example: 1
+                            problemText:
+                              type: string
+                              description: 문제 텍스트
+                              example: "2+4"
+                            problemImage:
+                              type: string
+                              description: 문제 사진 URL
+                              example: "http://example.com/image.png"
+        '400':
+          description: 잘못된 요청
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: string
+                    example: "COMMON001"
+                  message:
+                    type: string
+                    example: "잘못된 요청입니다."
+                  result:
+                    type: string
+                    example: "잘못된 요청 본문"
         '404':
           description: 찾을 수 없음
           content:
@@ -197,10 +353,20 @@ paths:
               schema:
                 type: object
                 properties:
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: strinf
+                    example: "COMMON005"
                   message:
                     type: string
                     example: "데이터를 찾을 수 없습니다."
-  /folders/problems:
+                  result:
+                    type: string
+                    example: "데이터를 찾을 수 없습니다."
+
+  /problems:
     post:
       tags:
         - 홈
@@ -215,8 +381,7 @@ paths:
             Authorization:
               type: string
               description: 헤더에 토큰을 입력
-
-      - name: addProblem
+      - name: problemData
         in: body
         required: true
         schema:
@@ -229,10 +394,6 @@ paths:
               type: integer
               description: 사용자 ID
               example: 1
-            subscriptionPlan:
-              type: boolean
-              description: 구독 계획
-              example: true
             problemText:
                type: string
                description: 문제 텍스트
@@ -241,18 +402,44 @@ paths:
               type: string
               description: 문제 정답
               example: "6"
-            mainCategory:
+            status:
               type: string
-              description: 대분류
-              example: "수학"
-            category:
+              description: 문제의 현재 상태
+              example: "작성"
+              enum:
+                - "수정"
+                - "삭제"
+                - "작성"
+            correctCount:
+              type: integer
+              description: 정답 횟수
+              example: 10
+            incorrectCount:
+              type: integer
+              description: 오답 횟수
+              example: 2
+            orderValue:
+              type: integer
+              description: 문제 순서
+              example: 1
+            memo:
               type: string
-              description: 중분류
-              example: "미적분"
-            subCategory:
-              type: string
-              description: 소분류
-              example: "함수의 극한"
+              description: 메모
+              example: 문제에 대한 추가 설명
+            mainTypeId:
+              type: integer
+              description: 대분류 유형 ID
+              example: 1
+            midTypeId:
+              type: integer
+              description: 중분류 유형 ID
+              example: 2
+            subTypeIds:
+              type: array
+              items:
+                type: integer
+              description: 소분류 유형 ID 배열
+              example: [3, 4]
             photos:
               type: array
               items:
@@ -266,8 +453,7 @@ paths:
                   photoType:
                     type: string
                     description: 사진 유형
-                    example: "문제"     
-               
+                    example: "문제"            
       responses:
         '200':
           description: 문제 추가 성공
@@ -276,22 +462,37 @@ paths:
               schema:
                 type: object
                 properties:
-                  issuccess:
+                  isSuccess:
                     type: boolean
                     example: true
+                  code:
+                    type: integer
+                    example: 2000
                   message:
                     type: string
-                    example: 문제 추가하기 성공             
+                    example: "success!"
+                  result:
+                    type: string
+                    example: "문제 추가 성공"
         '400':
-          description: 문제 추가하기 실패
+          description: 잘못된 요청
           content:
             application/json:
               schema:
                 type: object
                 properties:
-                  errorMessage:
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
                     type: string
-                    example: Invalid request
+                    example: "COMMON001"
+                  message:
+                    type: string
+                    example: "잘못된 요청입니다."
+                  result:
+                    type: string
+                    example: "잘못된 요청 본문"
 
   /problems/search:
     get:
